search wrap fixed, renames

--- a/search.css
+++ b/search.css
@@ -11,15 +11,25 @@
     height: 20vh;
     margin-left: 2rem;
     margin-right: 2rem;
+    border-bottom: 1px solid white;
 }
 .movie-genre h2{
     font-size: 40px;
 }
 
+
+
+#search-container{
+    flex-wrap: wrap;
+    justify-content: center;
+    height: 50vh;
+}
+
+
 #footer{
     height: 27vh;
-    position: absolute;
-    bottom: -102px;
+    position: relative;
+    bottom: -5px;
     width: 100%;
     border-top: 1px solid rgba(255, 255, 255, 0.293);
 }
